# ontology-browser

./: .gitignore  Makefile  README.md  pyproject.toml
ontology_browser/: db.sqlite3  manage.py
ontology_browser/browser/: forms.py  mongodb_utils.py  mongodb_utils_added.py  urls.py  views.py
ontology_browser/browser/templates/browser/: concept_detail.html  concept_list.html  concept_search.html  home.html  search.html  task_detail.html  task_list.html
ontology_browser/browser/templatetags/: custom_filters.py
ontology_browser/ontology_browser/: asgi.py  settings.py  urls.py  wsgi.py
src/ontology-browser/: load_concept_data_into_mongodb.py  load_task_data_into_mongodb.py  mongodb_utils.py
src/ontology_browser/: __init__.py  load_task_data_into_mongodb.py
